--- a/01-starting-project/public/index.html
+++ b/01-starting-project/public/index.html
@@ -28,7 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- adding 2 divs for portals -->
+    <div id="backdrop-root"></div>
+    <div id="modal-root"></div>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
